# Cut_List_Calculator

./: .gitignore  CMakeLists.txt  README.md
example_problem_specs/: test_1.json  test_2.json  test_3.json
include/: cut_optimization_solver.hpp  json_problem_parser.hpp  types.hpp
src/: cut_optimization_solver.cpp  json_problem_parser.cpp  main.cpp  types.cpp
